[package]
name = "timetrap"
version = "0.1.2"
edition = "2024"
authors = [
    "Vladyslav Neichev"
]
description = "Macros to wrap your code and measure time"
repository = "https://github.com/vladneyo/timetrap"
license = "MIT"
keywords = ["timer", "performance", "monitoring", "logging"]
categories = ["development-tools", "development-tools::debugging", "development-tools::profiling"]
homepage = "https://github.com/vladneyo/timetrap"
readme = "README.md"

exclude = [
    ".idea/*",
    ".github/*",
    "*.orig",
    "**/tests/*"
]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
sysinfo = "0.34.1"

[dev-dependencies]
mockall = "0.13.1"
serial_test = "2.0"
